Matches page design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,5 +32,11 @@
 
 	<%= yield %>
 
+<script type="text/javascript">
+$(function () {
+	$('[data-toggle="tooltip"]').tooltip();
+});
+</script>
+
 </body>
 </html>
