--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#profile</h1>
-<p>Find me in app/views/users/profile.html.erb</p>
+<div class="container">
+	<div class="wrap">
+		<div class="profile-box">
+			<div class="img">
+				<%= image_tag "cat.jpg", width: "100%", height: "100%" %>
+			</div>
+			<div class="user-name pull-left"><a href="#"><b>Name</b>, 27</a></div>
+			<div class="user-location text-right"><i class="fa fa-map-marker"></i> London</div>
+			<div class="description">
+				<h4 class="text-uppercase"><small>Description</small></h4>
+				<p class="small">
+Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
+</p>
+			</div>
+		</div>
+	</div>
+</div>
