--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -5,7 +5,7 @@
 				<%= image_tag "cat.jpg", width: "100%", height: "100%" %>
 			</div>
 			<div class="user-name pull-left"><a href="#"><b>Name</b>, 27</a></div>
-			<div class="user-location text-right"><i class="fa fa-map-marker"></i> London</div>
+			<div class="user-location text-right"><i class="fa fa-map-marker"></i> Toncholandia</div>
 			<div class="description">
 				<h4 class="text-uppercase"><small>Description</small></h4>
 				<p class="small">
