--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,19 @@
 <div class="bg-dark"></div>
 <div class="home-information">
 	<h1 class="slogan">Any swipe can change your life.</h1>
-	<a class="btn btn-social btn-lg btn-facebook">
-		<i class="fa fa-facebook"></i> Sign in with Facebook
-	</a>
+	
+	<%= link_to  "auth/facebook", class: "btn btn-social btn-lg btn-facebook" do %>
+	<i class="fa fa-facebook"></i> Sign in with Facebook
+	<% end %>
 	<br /><br />
 </div>
 
 <!-- SLIDER BACKGROUND -->
 <script type="text/javascript">
 
-	jQuery(function($){
+jQuery(function($){
 
-		$.supersized({
+	$.supersized({
 
 			// Functionality
 			slide_interval          :   4000,		// Length between transitions
@@ -22,13 +23,13 @@
 			// Components							
 			slide_links				:	'blank',	// Individual links for each slide (Options: false, 'num', 'name', 'blank')
 			slides 					:  	[			// Slideshow Images
-				{image : 'assets/bg.jpg'},
-				{image : 'assets/bg2.jpg'},
-				{image : 'assets/bg3.jpg'}
+			{image : 'assets/bg.jpg'},
+			{image : 'assets/bg2.jpg'},
+			{image : 'assets/bg3.jpg'}
 			]
-					
+			
 		});
-	});
+});
 
 </script>
 
