Improved Index Design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,8 @@
 @import "supersized";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "tools";
+@import "jTinder";
 @import "styles";
+@import "tools";
 
 
