--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
 	<%= yield %>
 
 <script type="text/javascript">
+
 $(function () {
 	$('[data-toggle="tooltip"]').tooltip();
 });
@@ -47,12 +48,15 @@ $(function () {
 
 <script type="text/javascript">
 
+$("#tinderslide > ul li").tsort({attr: "id"});
+
 $("#tinderslide").jTinder({
+
 	onDislike: function (item) {
-		alert('Dislike image ' + (item.index()+1));
+		//alert('Dislike image ' + (item.index()+1));
 	},
 	onLike: function (item) {
-		alert('Like image ' + (item.index()+1));
+		//alert('Like image ' + (item.index()+1));
 	},
 	
 	animationRevertSpeed: 200,
