--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,61 +12,69 @@
 
 	<% if current_user %>
 	<nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
-	  <ul class="nav navmenu-nav">
-	    <li class="active"><a href="#"><i class="fa fa-users"></i> Discover</a></li>
-		<li><a href="#"><i class="fa fa-heart"></i> Matches</a></li>
-		<li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
-		<li><%= link_to '/sign_out', method: :delete do %><i class="fa fa-cog"></i> Log Out <% end %></li>
-	  </ul>
+		<ul class="nav navmenu-nav">
+			<li class="active"><a href="#"><i class="fa fa-users"></i> Discover</a></li>
+			<li><a href="#"><i class="fa fa-heart"></i> Matches</a></li>
+			<li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
+			<li><%= link_to '/sign_out', method: :delete do %><i class="fa fa-cog"></i> Log Out <% end %></li>
+		</ul>
 	</nav>
 
 	<div class="navbar navbar-default navbar-fixed-top">
-	  <button type="button" class="navbar-toggle button-nav" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
-	    <i class="fa fa-cog"></i>
-	  </button>
-	  <button type="button" class="navbar-toggle pull-right button-nav">
-		<i class="fa fa-heart"></i>
-	  </button>
+		<button type="button" class="navbar-toggle button-nav" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+			<i class="fa fa-cog"></i>
+		</button>
+		<button type="button" class="navbar-toggle pull-right button-nav">
+			<i class="fa fa-heart"></i>
+		</button>
 	</div>
 
-<% else %>
+	<% else %>
 
 	<a class="navbar-brand" href="#">
-			<%= image_tag "logo_white.png", alt: "Tinstuk Logo", class: "logo-brand" %>
+		<%= image_tag "logo_white.png", alt: "Tinstuk Logo", class: "logo-brand" %>
 	</a>
 	
-<% end %>
+	<% end %>
 
 	<%= yield %>
 
-<script type="text/javascript">
+	<script type="text/javascript">
 
-$(function () {
-	$('[data-toggle="tooltip"]').tooltip();
+	$(function () {
+		$('[data-toggle="tooltip"]').tooltip();
+	});
+	</script>
+
+	<script type="text/javascript">
+
+	/**
+  * Set button action to trigger jTinder like & dislike.
+*/
+
+$('.actions .like, .actions .dislike').click(function(e){
+	e.preventDefault();
+	$("#tinderslide").jTinder($(this).attr('class'));
 });
-</script>
 
-<script type="text/javascript">
-
-$("#tinderslide > ul li").tsort({attr: "id"});
+$("#tinderslide > ul li").tsort({attr:"id"});
 
 $("#tinderslide").jTinder({
-
-	onDislike: function (item) {
-		//alert('Dislike image ' + (item.index()+1));
-	},
-	onLike: function (item) {
-		//alert('Like image ' + (item.index()+1));
-	},
-	
-	animationRevertSpeed: 200,
-	animationSpeed: 400,
-	threshold: 1,
-	likeSelector: '.like',
-	dislikeSelector: '.dislike'
+    onDislike: function (item) {
+        alert('Dislike image ' + (item.index()+1));
+    },
+    onLike: function (item) {
+        alert('Like image ' + (item.index()+1));
+    },
+    animationRevertSpeed: 200,
+    animationSpeed: 400,
+    threshold: 1,
+    likeSelector: '.like',
+    dislikeSelector: '.dislike'
 });
 
-</script>
+
+  </script>
 
 </body>
 </html>
