--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,82 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tinstuk</title>
-	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-	<%= csrf_meta_tags %>
-	<meta name="viewport" content="width=device-width, initial-scale=0.9">
+  <title>Tinstuk</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=0.9">
 </head>
-
 <body>
 
-	<% if current_user %>
+<% if current_user %>
 	<nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
 		<ul class="nav navmenu-nav">
-			<li class="active"><a href="#"><i class="fa fa-users"></i> Discover</a></li>
-			<li><a href="#"><i class="fa fa-heart"></i> Matches</a></li>
-			<li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
-			<li><%= link_to '/sign_out', method: :delete do %><i class="fa fa-cog"></i> Log Out <% end %></li>
+			<li class="<%= if params[:action] == "index" then "active" end %> nav-btn">
+				<%= link_to root_path do %><i class="fa fa-users"></i> Discover <% end %>
+			</li>
+
+			<li class="<%= if params[:action] == "matches" then "active" end %> nav-btn">
+				<%= link_to matches_user_path(current_user) do %><i class="fa fa-heart"></i> Matches <% end %>
+			</li>
+
+			<li class="<%= if params[:action] == "edit" then "active" end %> nav-btn">
+				<%= link_to edit_user_path(current_user) do %><i class="fa fa-cog"></i> Settings <% end %>
+			</li>
+
+			<li class="nav-btn"><%= link_to '/sign_out', method: :delete do %><i class="fa fa-cog"></i> Log out <% end %></li>
+
 		</ul>
 	</nav>
 
 	<div class="navbar navbar-default navbar-fixed-top">
-		<button type="button" class="navbar-toggle button-nav" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
-			<i class="fa fa-cog"></i>
-		</button>
-		<button type="button" class="navbar-toggle pull-right button-nav">
-			<i class="fa fa-heart"></i>
-		</button>
+	  
+		  <button type="button" class="navbar-toggle button-nav" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+		  	<i class="fa fa-cog"></i>
+		  </button>
+
+		  <%= link_to root_path, class: "navbar-brand" do %>
+		  	<%= image_tag "logo.png", alt: "Tinstuk logo", class: "logo-brand" %>
+		  <% end %>
+
+		  <button type="button" class="navbar-toggle button-nav pull-right">
+		  	<%= link_to matches_user_path(current_user) do %><i class="fa fa-heart"></i><% end %>
+		  </button>
+
 	</div>
 
-	<% else %>
+<% else %>
 
 	<a class="navbar-brand" href="#">
 		<%= image_tag "logo_white.png", alt: "Tinstuk Logo", class: "logo-brand" %>
 	</a>
+
+<% end %>
+
+<%= yield %>
+
+
+<script type="text/javascript">
+	$(".spinner").hide();
 	
-	<% end %>
-
-	<%= yield %>
-
-	<script type="text/javascript">
-
-	$(function () {
-		$('[data-toggle="tooltip"]').tooltip();
-	});
-	</script>
-
-	<script type="text/javascript">
-
-	/**
-  * Set button action to trigger jTinder like & dislike.
-*/
-
-$('.actions .like, .actions .dislike').click(function(e){
-	e.preventDefault();
-	$("#tinderslide").jTinder($(this).attr('class'));
-});
-
-$("#tinderslide > ul li").tsort({attr:"id"});
-
-$("#tinderslide").jTinder({
-    onDislike: function (item) {
-       //  alert('Dislike image ' + (item.index()+1));
-    },
-    onLike: function (item) {
-		var myId = $("tinderslide > ul li").last().attr("id");
-			$("#user_" + myId)[0].click();
+	$("#tinderslide").jTinder({
+		    onDislike: function (item) {
+		        //alert('Dislike image ' + (item.index()+1));
 		    },
-
-    animationRevertSpeed: 200,
-    animationSpeed: 400,
-    threshold: 1,
-    likeSelector: '.like',
-    dislikeSelector: '.dislike'
-});
-
-
-  </script>
-
+		    onLike: function (item) {
+		        var myId = $("#tinderslide > ul li").last().attr("id");
+		        $("#user_" + myId)[0].click();
+		    },
+		    
+		    animationRevertSpeed: 200,
+		    animationSpeed: 400,
+		    threshold: 1,
+		    likeSelector: '.like',
+		    dislikeSelector: '.dislike'
+	});
+	$('.actions .like, .actions .dislike').click(function(e){
+		e.preventDefault();
+		$("#tinderslide").jTinder($(this).attr('class'));
+	});
+	$(".nav-btn").hover(function(){
+		$(this).addClass("active2");
+		}, function(){
+		$(this).removeClass("active2");	
+	});
+</script>
 </body>
 </html>
