fixed syntax error in views

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -62,6 +62,9 @@
   }
 }
 
+
+
+
 // BODY
 
 body {
@@ -264,7 +267,7 @@ p, ol, ul, td {
 	background-color: transparent !important;
 }
 
-///////
+//////////
 .navmenu-nav li.active2 a i {
 	border: 2px solid $brand-primary;
 	border-radius: 100%;
@@ -282,7 +285,7 @@ p, ol, ul, td {
 	color: $brand-primary !important;
 	background-color: transparent !important;
 }
-///////
+////////////
 
 .navmenu-nav li a i {
 	border: 2px solid white;
